<resources>
    <string name="app_name">WakeUpPilot</string>
    <string name="wake_up_pilot">WakeUpPilot</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Options</string>
    <string name="changer_langue">Changer la langue</string>

    <string name="bienvenue">Bienvenue</string>


    <string name="profile_welcome"> "Pour commencer le test\nCréer un nouveau profile"</string>
    <string name="intro_niveau_reference"> "Définissez votre niveau de référence pour calibrer l'application\nLe niveau de référence correspond à votre niveau d'éveil optimal"</string>
    <string name="duree_niveau_reference"> "Durée du test: 30 secondes"</string>
    <string name="list_niveau_reference"> "&#8226; Reposé\n&#8226; Installé dans un endroit calme\n&#8226; Evitez de l'effectuer après un repas\n"</string>
    <string name="tutorial"> "Cliquez vite sur la balle rouge dès qu'elle apparait sur l'écran vous n'avez que 30 secondes."</string>
    <string name="intro_after_reference"> "Niveau de référence enregistré"</string>
    <string name="after_reference"> "Vous pouvez maintenant évaluer votre niveau\nd'éveil avant de prendre le volant."</string>
    <string name="taux_reussite">Taux de réussite</string>
    <string name="etablir_niveau_reference">Etablir le niveau de reference</string>
    <string name="aide_test">Aide pour le test</string>
    <string name="historique_resultats">Historique des résultats</string>
    <string name="pseudonyme">Pseudonyme...</string>
    <string name="age">AGE</string>
    <string name="genre">GENRE</string>
    <string name="creer_button">Créer</string>
    <string name="deja_inscrit_button">Déjà inscrit</string>
    <string name="retour_list_profiles">Retour a la liste de profiles</string>
    <string name="passer_test_button">Passer le test</string>
    <string name="pourcentage_taux_reussite">% Taux de réussite</string>
    <string name="creer_nouveau_profile">Créer un nouveau profile</string>
    <string name="pour_passer_test">Pour passer ce test vous devez etre:</string>
    <string name="jai_compris_button">"J'ai compris"</string>
    <string name="retour_profile">Retour au profile</string>
    <string name="alarm">Alarme</string>
    <string name="alarm_description">Il est conseillé de se reposer après 2 heures de conduite \n Cette Alarme se déclenchera si vous dépassez 2 heures de conduite sans prendre de pause.</string>
    <string name="driving_time">Durée de conduite</string>
    <string name="start_alarm">Start</string>
    <string name="stop_alarm">Stop</string>
    <string name="credits">Application mobile développée, par Anas HMAMOUCH, ingénieur lauréat de l’INPT, dans le cadre d’un projet dédié à la ‘’Chevrolet Moroccan Smart Cart’’ initié par le Soft Centre pour le compte de CFAO Motors Maroc.</string>
    <string name="partenaires">Partenaires</string>
    <string name="dream_team">Soft Centre : www.softcentre.ma
    \nCFAO Motos Maroc : www.chevrolet-maroc.com/
    \nINPT : www.inpt.ac.ma
        \nEmail: benzinoanas@gmail.com
    </string>
    <string name="retour_conseils">Retour aux conseils</string>
    <string name="pas_conseils">Pas de Conseils pour le moment!</string>
    <string name="verifier_internet">Veuillez verifier votre connexion internet</string>

    <string name="relaxation"></string>

    <string name="supprimer_profile">Supprimer profile</string>
    <string name="sure_supprimer_profile">Etes vous sure de supprimer ce profile</string>

    <string name="quitter_application">"Quitter l'application"</string>
    <string name="sure_vouloir_quitter">"Etes vous sure de vouloir quitter l'application?"</string>

    <string name="oui">Oui</string>
    <string name="non">Non</string>

    <!--Toast strings -->
    <string name="toast_entrer_pseudonyme">"Vous devez entrer un pseudonyme"</string>
    <string name="toast_depasser_pseudonyme">"Votre pseudonyme ne doit pas dépasser les 24 caractères!"</string>

    <!--Toolbar strings -->
    <string name="toolbar_bienvenue">BIENVENUE</string>
    <string name="toolbar_carte">Carte</string>
    <string name="toolbar_tutoriel">TUTORIEL</string>
    <string name="toolbar_liste_profiles">PROFILES</string>
    <string name="toolbar_nouveau_profile">NOUVEAU PROFILE</string>
    <string name="toolbar_historique_resultats">HISTORIQUE DES RESULTATS</string>
    <string name="toolbar_niveau_reference">NIVEAU DE REFERENCE</string>
    <string name="toolbar_relaxation">Relaxation guidée</string>
    <string name="toolbar_conseils">Conseils</string>
    <string name="toolbar_credits">Crédits</string>


    <!--Alert Dialog strings-->
    <string name="dialog_title">Temps écoulé</string>
    <string name="dialog_touchez_balle">Vous avez touchez la balle</string>
    <string name="dialog_fois">fois</string>
    <string name="dialog_refaire_test">Refaire le test</string>
    <string name="dialog_retourner_profile">Retourner au profile</string>
    <string name="dialog_enregistrer_score">Enregistrer score</string>
    <string name="dialog_score_minimum">"Vous n'avez pas dépasser le score minimum \n Voulez-vous "</string>

    <string name="veuillez_patientez">Veuillez patienter ...</string>


    <string name="first_time"> "C'est la première fois que vous lancez l'application,\nvous devez établir votre niveau de référence:"</string>
    <string name="description_welcome">
        "Cette application vous permet de tester votre niveau d'éveil avant de prendre le volant. Pour cela, vous devez auparavant définir votre niveau de référence qui correspond à votre niveau d'éveil optimal dans le cadre d'un premier test."
    </string>

    <string-array name="age_array">
        <item>- 40 ans</item>
        <item>40 - 60 ans </item>
        <item>+ 60 ans</item>
    </string-array>

    <string name="moins_40"> - 40 ans</string>
    <string name="entre_40_60"> 40 - 60 ans</string>
    <string name="plus_60"> + 60 ans</string>

    <string-array name="genre_array">
        <item>Homme</item>
        <item>Femme </item>
    </string-array>

    <string name="male">Homme</string>
    <string name="female">Femme</string>

    <string-array name="languages">
        <item>Select language</item>
        <item>English</item>
        <item>French </item>
        <item>Arabic </item>
    </string-array>

    <string name="title_activity_choose_lang">ChooseLang</string>
    <string name="radio_arabic">العربية</string>
    <string name="radio_french">Français</string>
    <string name="radio_english">English</string>
    <string name="toolbar_video">Relax video</string>


</resources>
