<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeActivity">


    <item
        android:id="@+id/Language"
        android:title="@string/changer_langue"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_map"
        android:title="@string/toolbar_carte"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_advice"
        android:title="@string/toolbar_conseils"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_video"
        android:title="@string/toolbar_relaxation"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_credits"
        android:title="@string/toolbar_credits"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
