<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreditsActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <ImageView
        android:id="@+id/logo_welcome"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_text_teal_dark"
        android:padding="10dp"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:antialias="true"
        />

    <TextView
        android:text="@string/credits"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="16dp"
        android:padding="10dp"
        android:textAlignment="center"
        />

    <TextView
        android:text="@string/partenaires"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:text="@string/dream_team"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="16dp"
        android:padding="10dp"
        />



</LinearLayout>
