<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/alarm_time"
            android:text="@string/driving_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24dp"
            android:textStyle="bold"
            android:padding="24dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/alarm_time_hours"
            android:text="00:00"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24dp"
            android:padding="8dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/alarm_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_description"
            android:textSize="16sp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/alarm_demarrer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_alarm"
        android:textSize="14dp"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:background="@color/ColorPrimaryDark"

        android:layout_gravity="center|bottom"

        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <Button
        android:id="@+id/alarm_arreter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_alarm"
        android:textSize="14dp"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:background="@color/ColorPrimaryDark"

        android:layout_gravity="center|bottom"

        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"/>

</LinearLayout>