<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReferenceActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"/>

    <TextView
        android:id="@+id/intro_after_reference"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18dp"
        android:textAlignment="center"
        android:text= "@string/intro_after_reference"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/after_reference"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18dp"
        android:textAlignment="center"
        android:text= "@string/after_reference"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/retour_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/retour_profile"
            android:textSize="14dp"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:background="@color/ColorPrimaryDark"

            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</LinearLayout>