<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            ></include>

        <TextView
            android:id="@+id/text_niveau_reference"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            android:textAlignment="center"
            android:text= "@string/first_time"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/success_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="--%"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="@string/taux_reussite"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/niveau_reference"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/etablir_niveau_reference"
            android:textSize="14dp"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:background="@color/ColorPrimaryDark"

            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/retour_list_profiles"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/retour_list_profiles"
            android:textSize="14dp"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:background="@color/ColorPrimaryDark"

            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"/>


    </LinearLayout>

</LinearLayout>