<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TestNewActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <TextView
        android:id="@+id/test_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="16dp"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/success_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="--"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/pourcentage_taux_reussite"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/passer_test"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/passer_test_button"
            android:textSize="14dp"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:background="@color/ColorPrimaryDark"

            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/retour_list_profiles"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/retour_list_profiles"
            android:textSize="14dp"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:background="@color/ColorPrimaryDark"

            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"/>



        <Button
            android:id="@+id/historique_resultats"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/historique_resultats"
            android:textSize="14dp"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:background="@color/ColorPrimaryDark"

            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"/>


    </LinearLayout>

</LinearLayout>
