<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <ImageView
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/newuser"
        android:padding="10dp"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:scaleType="centerCrop"/>

    <TextView
        android:text="@string/profile_welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24dp"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        />

    <TextView
        android:text="@string/description_welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="16dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/nouveau_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/creer_nouveau_profile"
            android:textSize="14dp"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:background="@color/ColorPrimaryDark"

            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"/>

    </LinearLayout>

</LinearLayout>
