<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ChooseLang">


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:alpha=".9"
    android:background="@drawable/dark_background_image_wakeuppilot"
    android:scaleType = "centerCrop">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight=".5"
        android:src="@drawable/logo_text_white"/>

    <RadioGroup
        android:id="@+id/radioGroup_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <RadioButton

            android:id="@+id/radio_arabic"
            android:button="@null"
            android:drawableTop="@mipmap/ma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="arabic"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:text="@string/radio_arabic"
            android:layout_weight=".3"
            android:gravity="center"

            />

        <RadioButton

            android:id="@+id/radio_french"
            android:button="@null"
            android:drawableTop="@mipmap/fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:tag="french"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:text="@string/radio_french"

            />

        <RadioButton
            android:id="@+id/radio_english"
            android:button="@null"
            android:drawableTop="@mipmap/us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:tag="english"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:text="@string/radio_english"
            />
    </RadioGroup>



</LinearLayout>
</LinearLayout>

