<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReferenceActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <TextView
        android:id="@+id/intro_niveau_reference"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18dp"
        android:textAlignment="center"
        android:text= "@string/intro_niveau_reference"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        />

    <TextView
        android:id="@+id/duree_niveau_reference"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24dp"
        android:textAlignment="center"
        android:text= "@string/duree_niveau_reference"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:textStyle="italic"
        />


    <TextView

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|left"
        android:textSize="18dp"

        android:layout_marginLeft="24dp"

        android:text= "Pour passer ce test vous devez etre:"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/list_niveau_reference"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:textSize="14dp"
        android:layout_marginLeft="48dp"

        android:text= "@string/list_niveau_reference"

        android:layout_marginBottom="24dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
        android:id="@+id/passer_niveau_reference"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Passer le test"
        android:textSize="14dp"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:background="@color/ColorPrimaryDark"

        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"/>


    </LinearLayout>



</LinearLayout>